--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,10 @@
     font-size: .95rem;
   }
   
+  body, html {
+    height: 100%;
+  }
+
   ul, li {
     list-style-position: inside;
   }
@@ -41,7 +45,7 @@
   .centered-form {
     display: flex;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     justify-content: center;
     background: -moz-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ff3.6+ */
@@ -86,7 +90,7 @@
   .chat__sidebar {
     overflow-y: auto;
     width: 260px;
-    height: 100vh;
+    height: 100%;
     background: -moz-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(49,84,129,1)), color-stop(100%, rgba(39,107,130,1))); /* safari4+,chrome */
     background: -webkit-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* safari5.1+,chrome10+ */
@@ -116,13 +120,13 @@
   .chat__main {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 100%;
   }
   
   .chat__messages {
     flex-grow: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
   }
   
@@ -171,22 +175,52 @@
   .message__title span {
     color: #999;
   }
+
+  #hamburger_menu {
+    display: none;
+  }
   
   @media (max-width: 600px) {
     * {
       font-size: 1rem;
     }
-  
-    .chat__sidebar {
-      display: none;
+    
+    .chat {
+      flex-direction: column;
     }
-  
+
+    .chat__main {
+      height: 100%;
+    }
+
+    .chat__sidebar {
+      width: 100%;
+      height: auto;
+      overflow-y: visible;
+    }
+
     .chat__footer {
       flex-direction: column;
     }
-  
+
+    .people_list {
+      display: none;
+    }
+    
+    .show {
+      display: block;
+    }
+
     .chat__footer form {
       margin-bottom: 10px;
+    }
+
+    #send-location {
+      display: none;
+    }
+
+    #hamburger_menu {
+      display: block;
     }
   
     .chat__footer button {
